# python-template-example

./: .auto-changelog  .copier-answers.yml  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.txt  README.md  package.json  pyproject.toml  tox.ini
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yaml  feature_request.yaml  how_to_use.yaml
.github/workflows/: _dist.yml  _docs.yml  _pypi.yml  _release.yml  _test.yml  _tox.yml  ci.yml  commitlint.yml  new_python.yml  periodic.yml  pr.yml
docs/: _api.rst  cli.md  conf.py  explanations.md  index.md  reference.md
docs/explanations/: decisions.md  project-layout.md
docs/how-to/: contribute.md  lock-requirements.md  make-release.md  run-cli.md  run-tests.md  update-template.md
docs/tutorials/: installation.md
src/python_template_example/: __init__.py  __main__.py  cli.py
tests/: __init__.py  test_cli.py  test_example.py
