[build-system]
requires = [
    "setuptools>=77",
    "setuptools_scm[toml]>=8",
]
build-backend = "setuptools.build_meta"

[project]
name = "python-template-example"
authors = [{name="Adrien Berchet", email="adrien.berchet@gmail.com"}]
description = "A generated project used to validate the Copier template."
readme = "README.md"
requires-python = ">=3.12"
license-files = ["LICENSE.txt"]
classifiers = [
    # TODO: Update to relevant classifiers
    "Development Status :: 2 - Pre-Alpha",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dynamic = ["version"]
dependencies = [
    "click>=8.1",
]

[project.optional-dependencies]
docs = [
    "furo>=2024.08.06",
    "myst-parser>=3",
    "sphinx>=9",
    "sphinx-autobuild>=2024",
    "sphinx-click>=6",
    "sphinx-copybutton>=0.5.2",
    "sphinx-design>=0.6",
]
test = [
    "pytest>=8",
    "pytest-click>=1.1",
    "pytest-console-scripts>=1.4",
    "pytest-cov>=6.1",
    "pytest-html>=4.1",
]

[tool.uv]
constraint-dependencies = [
    # Floor unpinned transitive dependencies so `tox -e min_versions` (uv pip compile
    # --resolution lowest) can't resolve to ancient releases that fail to build
    # (e.g. PyYAML <5.4 doesn't compile against modern libyaml).
    "iniconfig>=1.1",
    "pyyaml>=6.0.1",
    "beautifulsoup4>=4.9",
    "colorama>=0.4",
    "tornado>=6.1",
    "livereload>=2.6",
    ]

[dependency-groups]
dev = [
    "copier",
    "pre-commit",
    "tox>=4.20",
    "tox-gh-actions>=3",
    "pyright",
    "types-mock",
]

[project.urls]
Homepage = "https://python-template-example.readthedocs.io"
Repository = "https://github.com/adrien-berchet/python-template-example"
Tracker = "https://github.com/adrien-berchet/python-template-example/issues"

[project.scripts]
python-template-example = "python_template_example.cli:main"

[tool.setuptools]
include-package-data = true
package-dir = {"" = "src"}
zip-safe = false

[tool.setuptools_scm]

[tool.setuptools.packages.find]
where = ["src"]
include = ["python_template_example*"]

[tool.pyright]
typeCheckingMode = "strict"
reportMissingImports = false
include = ["src", "tests"]


[tool.pytest.ini_options]
testpaths = [
    "docs",
    "src",
    "tests",
]
addopts = """
    --tb=native -vv --import-mode=importlib --doctest-modules --doctest-glob="*.rst"
    """
filterwarnings = "error"

[tool.coverage.paths]
source = ["src", "**/site-packages/"]

[tool.ruff]
src = ["src", "tests"]
line-length = 100

[tool.ruff.lint]
select = [
    "B",    # flake8-bugbear - https://docs.astral.sh/ruff/rules/#flake8-bugbear-b
    "C4",   # flake8-comprehensions - https://docs.astral.sh/ruff/rules/#flake8-comprehensions-c4
    "D",    # pydocstyle - https://docs.astral.sh/ruff/rules/#pydocstyle-d
    "E",    # pycodestyle errors - https://docs.astral.sh/ruff/rules/#error-e
    "F",    # pyflakes - https://docs.astral.sh/ruff/rules/#pyflakes-f
    "I",    # isort - https://docs.astral.sh/ruff/rules/#isort-i
    "N",    # pep8-naming - https://docs.astral.sh/ruff/rules/#pep8-naming-n
    "UP",   # pyupgrade - https://docs.astral.sh/ruff/rules/#pyupgrade-up
    "W",    # pycodestyle warnings - https://docs.astral.sh/ruff/rules/#warning-w
    "SLF",  # private-member-access - https://docs.astral.sh/ruff/settings/#lintflake8-self
]
ignore = [
    "D107",  # Missing docstring in __init__
    "D203",  # 1 blank line required before class docstring
    "D213",  # Multi-line docstring summary should start at the second line
    "D413",  # Missing blank line after last section
]

[tool.ruff.lint.per-file-ignores]
# By default, private member access is allowed in tests
"tests/**/*" = ["SLF001"]

[tool.ruff.lint.isort]
force-single-line = true
